# patternrecognition-group1-groupexercise4

./: README.md  main.py  pyproject.toml  requirements.txt
data/SignatureVerification/: gt.tsv
data/SignatureVerification/enrollment/: 001-g-01.tsv  001-g-02.tsv  001-g-03.tsv  001-g-04.tsv  001-g-05.tsv  002-g-01.tsv  002-g-02.tsv  002-g-03.tsv  002-g-04.tsv  002-g-05.tsv  003-g-01.tsv  003-g-02.tsv  003-g-03.tsv  003-g-04.tsv  003-g-05.tsv  004-g-01.tsv  004-g-02.tsv  004-g-03.tsv  004-g-04.tsv  004-g-05.tsv  005-g-01.tsv  005-g-02.tsv  005-g-03.tsv  005-g-04.tsv  005-g-05.tsv  006-g-01.tsv  006-g-02.tsv  006-g-03.tsv  006-g-04.tsv  006-g-05.tsv  007-g-01.tsv  007-g-02.tsv  007-g-03.tsv  007-g-04.tsv  007-g-05.tsv  008-g-01.tsv  008-g-02.tsv  008-g-03.tsv  008-g-04.tsv  008-g-05.tsv  (+110 more)
data/SignatureVerification/verification/: 001-01.tsv  001-02.tsv  001-03.tsv  001-04.tsv  001-05.tsv  001-06.tsv  001-07.tsv  001-08.tsv  001-09.tsv  001-10.tsv  001-11.tsv  001-12.tsv  001-13.tsv  001-14.tsv  001-15.tsv  001-16.tsv  001-17.tsv  001-18.tsv  001-19.tsv  001-20.tsv  001-21.tsv  001-22.tsv  001-23.tsv  001-24.tsv  001-25.tsv  001-26.tsv  001-27.tsv  001-28.tsv  001-29.tsv  001-30.tsv  001-31.tsv  001-32.tsv  001-33.tsv  001-34.tsv  001-35.tsv  001-36.tsv  001-37.tsv  001-38.tsv  001-39.tsv  001-40.tsv  (+1310 more)
src/: data_formatting.py  dtw.py  treshold_classifier.py
